--- a/app/src/components/taskbar.css
+++ b/app/src/components/taskbar.css
@@ -3,8 +3,8 @@
 .button {
     @apply py-[0.2cm] px-4 m-2 border-2 border-[#fbd499] text-white 
            rounded-lg font-sans text-base bg-[#cbc385] cursor-pointer 
-           flex items-center justify-center w-[96%] gap-1 
-           transition-colors duration-100 ease-in-out hover:bg-[#fbd499];
+           flex items-center justify-center w-[90%] gap-1 
+           transition-colors duration-100 ease-in-out hover:bg-[#fbd499] mx-auto;
   }
   
   .button-clicked {
